# cafe-booking

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  telegram-pr-notify.yml
infra/: docker-compose-production.yml  docker-compose.yml
infra/app/: Dockerfile  alembic.ini  pyproject.toml
infra/app/scripts/: entrypoint.sh
infra/app/src/: api.py  config.py  main.py
infra/app/src/actions/: models.py  (+3 more)
infra/nginx/: Dockerfile  nginx.conf
nginx/: nginx.conf
postman_collection/: 10 Создание бронирования.md  20 Изменение бронирования.md  Cafe_booking.postman_collection.json  README.md
scripts/: entrypoint.sh
src/: Dockerfile  api.py  base_schemas.py  config.py  crud_base.py  main.py  models.py  requirements.txt
src/actions/: models.py  router.py  schemas.py  service.py  validators.py  views.py
src/auth/: __init__.py  responces.py  router.py  views.py
src/booking/: __init__.py  constants.py  crud.py  exceptions.py  lookup.py  models.py  schemas.py  services.py  validators.py  views.py
src/cache/: __init__.py  client.py  decorators.py  invalidation.py  keys.py
src/cafes/: cafe_scoped.py  cafes_help_caches.py  crud.py  models.py  responses.py  schemas.py  service.py  view.py  views.py
src/celery/: celery_app.py
src/celery/tasks/: __init__.py  admin_events.py  daily_reminders.py
src/common/: __init__.py  errors.py  exception_handlers.py  exceptions.py  responses.py  schemas.py
src/common/logging/: __init__.py  config.py  decorators.py
src/database/: __init__.py  base.py  engine.py  service.py  sessions.py
src/database/revisions/: env.py
src/dishes/: __init__.py  crud.py  models.py  responses.py  router.py  schemas.py  services.py  validators.py  views.py
src/logger/: constants.py  logger.py
src/media/: __init__.py  crud.py  models.py  responses.py  schemas.py  services.py  validators.py  views.py
src/services/: decorators.py
src/slots/: crud.py  models.py  responses.py  schemas.py  slot_and_table_helpers.py  utils.py  views.py
src/tables/: crud.py  models.py  responses.py  schemas.py  utils.py  views.py
src/users/: __init__.py  admin_user_creation.md  api.py  constants.py  crud.py  dependencies.py  models.py  responses.py  schemas.py  security.py  services.py  validators.py  views.py
tests/: conftest.py  test_db_session.py
(+48 files in other folders)
