[project]
name = "booking_seats_team-4"
version = "0.1.0"
description = "API для бронирования столов в кафе"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3.12"]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "celery>=5.6.0",
    "fastapi>=0.124.2",
    "greenlet>=3.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "ruff>=0.11.11",
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.11",
    "pre-commit>=4.2.0",
]
testing = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[tool.ruff]
indent-width = 4
line-length = 79
required-version = ">=0.11.11"
target-version = "py312"
preview = true
exclude = [
    "__pycache__",
    "revisions",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = [
    "E3",
    "E5",
    "E4",
    "E7",
    "E9",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "F",
    "ANN",
    "ASYNC",
    "A",
    "COM",
    "RET",
]
ignore = [
    "E265",
    "F811",
    "D100",
    "D105",
    "D104",
    "D203",
    "D211",
    "D213",
    "N818",
    "W505",
    "ANN401",
    "A005",
    "A002",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "E401"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["src"]
lines-after-imports = 2
combine-as-imports = true
split-on-trailing-comma = true
force-single-line = false
force-sort-within-sections = true
order-by-type = false
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-doc-length = 79
max-line-length = 79

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testspath = ["tests"]
addopts = [
    "--import-mode=importlib",
    "-v",
    "--strict-markers",
    "--disable-warnings",
    "-p no:warnings"
]
